--- a/hep-th-0012253/main.tex
+++ b/hep-th-0012253/main.tex
@@ -370,8 +370,8 @@ In his historical survey, Weinberg writes \cite{Weinberg89}:
 Perhaps surprisingly, it was a long time before
 particle physicists began seriously to worry about this problem
 despite the demonstration in the Casimir effect of the reality of
-zero point energies. Since the cosmological upper bound on $ | <
-\rho > + \lambda / 8 \pi G | $ was vastly less than any value
+zero point energies. Since the cosmological upper bound on $ | \langle
+\rho \rangle + \lambda / 8 \pi G | $ was vastly less than any value
 expected from particle theory, most particle theorists simply
 assumed that for some unknown reason this quantity was 
 zero.\footnote{In
@@ -673,8 +673,7 @@ physics. The zero-point energy in non-relativistic quantum
 mechanics is responsible, for example, for Helium remaining a
 fluid even at the lowest accessible temperatures.}
 
-\ \\
-{\em The free electromagnetic field}
+\sss{The free electromagnetic field}
 
 In a classical field theory, like classical electromagnetism,
 there are infinitely many degrees of freedom; the electric and
@@ -696,13 +695,13 @@ field operators $\hat{{\BFACE{E}}}$ and $\hat{{\BFACE{B}}}$ as the
 energy density in the classical theory ${\cal H}$ = 1/2
 $({{\BFACE{E}}}^2 + {{\BFACE{B}}}^2 ) $. 
 
-The vacuum state $|0>$ of a quantum field theory like QED
+The vacuum state $|0 \rangle $ of a quantum field theory like QED
 is defined as the ground state of the 
 theory. It turns out that in the ground state 
-$< 0| \hat{{\BFACE{E}}} |0> = 0$,   
-$< 0|\hat{{\BFACE{B}}} |0> = 0 $ whereas
-$< 0|\hat{{\BFACE{E}}}^2 |0> \neq 0$ and   
-$< 0|\hat{{\BFACE{B}}}^2 |0> \neq 0$.
+$\langle 0| \hat{{\BFACE{E}}} |0 \rangle  = 0$,   
+$\langle 0|\hat{{\BFACE{B}}} |0 \rangle  = 0 $ whereas
+$\langle 0|\hat{{\BFACE{E}}}^2 |0 \rangle  \neq 0$ and   
+$\langle 0|\hat{{\BFACE{B}}}^2 |0 \rangle  \neq 0$.
 These non-zero values of the vacuum expectation values for the squared
 field operators are often referred to as quantum field
 fluctuations but one should not think of them as fluctuations in time: 
@@ -712,9 +711,9 @@ Hamiltonian, there is no time evolution of this vacuum state.
 The total zero-point energy of the QED theory can be expressed by
 (see e.g. \cite{milonni94} p.364)
 \begin{equation} \label{discretecont}
-E \;=  \; <0| \hat{H} | 0> \; =\; 
-\frac{1}{2}<0|\int d^3 x({\hat{\bf E}}^2 + {\hat{\bf
-B}}^2)|0> \;
+E \;=  \; \langle 0| \hat{H} | 0 \rangle  \; =\; 
+\frac{1}{2}\langle 0|\int d^3 x({\hat{\bf E}}^2 + {\hat{\bf
+B}}^2)|0 \rangle  \;
 = \; \delta^{3} (0) \int d^3 k \frac{1}{2} \hbar \omega_{\bf k}
 \end{equation}
 where $\omega_{\bf k}$ and ${\bf k}$ refer to frequencies and
@@ -742,7 +741,7 @@ energy density (= energy per volume) can be derived directly from
 the summed zero-point energy for each oscillator
 mode,\footnote{When we here and in the following use the symbol
 $\rho$ for vacuum energy densities we understand the quantum
-mechanical expectation value $<0|\hat{\rho}|0>=<\rho_{vac}>$ for
+mechanical expectation value $\langle 0|\hat{\rho}|0 \rangle =\langle \rho _{vac}\langle$ for
 the energy density operator in the vacuum state.}
 
 \beq \label{zpeqed}
@@ -787,8 +786,7 @@ different ultraviolet frequency cut-off's in expression (\ref{zpeqed}),
 we shall briefly discuss what happens when interactions 
 are taken into account. 
 
-\ \\
-{\em Interacting electromagnetic fields}
+\sss{Interacting electromagnetic fields}
 
 The zero-point energy discussed above is a lowest order
 consequence of QED, i.e. it is present before interactions are
@@ -843,8 +841,7 @@ objects would be impossible. There is thus a break-down of the
 analogy between the QED vacuum and the ground state of a quantum
 mechanical system (e.g. in solid state physics).
 
-\ \\
-{\em Estimates of the QED zero-point energy}
+\sss{Estimates of the QED zero-point energy}
 
 How large is the zero-point energy in empty space supposed to be? The
 numerical answer clearly depends on which frequency interval we
@@ -951,9 +948,9 @@ $V(\phi)$ to be a polynomium with $\phi ^n$ terms up to at most fourth
 order in the Higgs field $\phi$ (when the spacetime dimension is
 four). I.e.  in spacetime dimension four, only a constant, and
 $\phi^2$ and $\phi^4$ terms are possible.} The vacuum expectation
-value of the Higgs field $v = < \phi >$ is inferred from the
+value of the Higgs field $v = \langle \phi \rangle$ is inferred from the
 experimentally known Fermi coupling constant (which in turn is
-determined from the muon decay rate) to be $v = < \phi > \simeq 250 \;
+determined from the muon decay rate) to be $v = \langle\phi\rangle  \simeq 250 \;
 GeV$.\footnote{The association of the vacuum expectation value of
 the Higgs field with the Fermi coupling constant is due to the
 identification of a electroweak interaction diagram (involving a
@@ -1005,8 +1002,8 @@ been very large at times before the electroweak phase transitions
 of the cosmos, this electroweak phase transition is believed to
 have taken place approximately $10^{-11}$ seconds after the `Big
 Bang'. The exact way in which the transition takes place from the high
-temperature symmetric phase with $<\phi> = 0$ (at $T>T_c$) to the
-low temperature asymmetric phase with $<\phi> = v \neq 0$ (at
+temperature symmetric phase with $\langle\phi\rangle \ = 0$ (at $T>T_c$) to the
+low temperature asymmetric phase with $\langle\phi\rangle  = v \neq 0$ (at
 $T<T_c$) can generally only be exploited by performing
 rather involved numerical calculations. A tentative result is that
 the phase transition among other things depends strongly on the
@@ -1033,7 +1030,7 @@ a settled theoretical issue. Nevertheless, it is generally asserted
 that the non-perturbative sector of QCD gives rise to gluon and quark
 `condensates' in the vacuum at low energies (at zero temperatures),
 that is, non-vanishing vacuum expectation values of the quark and
-gluon fields, e.g.  $<0 | \bar{q} q| 0> \neq 0$.  Estimates of the
+gluon fields, e.g.  $\langle 0 | \bar{q} q| 0 \rangle  \neq 0$.  Estimates of the
 vacuum energy density associated with these condensates are rather
 model dependent but they generally lead to vacuum energy densities
 given by some pre-factor times $\lambda_{QCD}^4$. The quantity
@@ -1053,10 +1050,10 @@ condensates in vacuum, present at lower temperatures, disappear as the
 temperature increases. This phase transition is related to the
 restoration of so-called chiral symmetry.  The picture is roughly as
 follows: At low temperatures, the chiral symmetry is spontaneously
-broken as mirrored in a non-vanishing quark condensate $<0 |\bar{q} q
-| 0 > \neq 0$, whereas the chiral symmetry is restored above the phase
-transition temperature where the quark condensate disappears, $< 0 |
-\bar{q} q | 0 > = 0$. In addition, the high temperature phase is
+broken as mirrored in a non-vanishing quark condensate $\langle 0 |\bar{q} q
+| 0 \rangle  \neq 0$, whereas the chiral symmetry is restored above the phase
+transition temperature where the quark condensate disappears, $\langle 0 |
+\bar{q} q | 0 \rangle  = 0$. In addition, the high temperature phase is
 characterized by the so-called quark-gluon plasma where the quarks are
 no longer confined within the hadrons (deconfinement).
 The experimental evidence for this picture of the QCD vacuum is,
@@ -1098,10 +1095,10 @@ highly complicated and non-perturbative dynamics)\footnote{See
 e.g. S.E. Rugh, ``Chaos in Yang-Mills fields and the Einstein
 equations'', Ph.D. thesis, The Niels Bohr Institute (1994).}. The
 massless pion acquires a mass by virtue of the non-vanishing quark
-condensate $< 0 | \bar{q} q | 0 > \neq 0$ in the vacuum:
+condensate $\langle 0 | \bar{q} q | 0 \rangle  \neq 0$ in the vacuum:
 \begin{equation} \label{GOR}
 m_{\pi}^2 = - \; f_{\pi}^{-2} \; (\frac{m_u + m_d}{2})
-< 0 | \bar{u} u + \bar{d} d | 0 >
+\langle 0 | \bar{u} u + \bar{d} d | 0 \rangle 
 \end{equation}
 where $f_{\pi}$ is a constant related to the decay time of the
 pion and $m_{u}$, $m_{d}$ is the mass of the $u$ and the $d$
@@ -1241,7 +1238,7 @@ is constant during inflation.\footnote{We shall later note that
 the equation of state for the vacuum is $ p = - \rho$, where $p$
 is a constant due to Lorentz invariance. This equation of state,
 which from a physics point of view is highly peculiar, thus gives
-rise to {\em negative} pressures $ p = - \rho < 0$ corresponding
+rise to {\em negative} pressures $ p = - \rho \langle 0$ corresponding
 to positive energy densities $\rho > 0$. Pressures in the
 Friedmann-Robertson-Walker model act contra intuitively (positive
 pressures lead to deceleration of the scale factor) and thus the
@@ -1335,8 +1332,7 @@ derived in a semi-classical approximation, so it is not obvious
 whether the conclusion is an artefact of this approximation (see
 also \cite{saunders99}).}
 
-\ \\
-{\em Further considerations on the measurability of the vacuum energy}
+\sss{Further considerations on the measurability of the vacuum energy}
 
 The question of measurability of the quantized electromagnetic fields
 was addressed already by Bohr and Rosenfeld in 1933 who investigated
@@ -1425,8 +1421,7 @@ features of the material systems (the pion) studied.}
 
 \end{itemize} 
 
-\ \\
-{\em Could observations of $\Lambda$ be an indication that there
+\sss{Could observations of $\Lambda$ be an indication that there
 is no real vacuum energy?}
 
 Given that the `vacuum' effects discussed above might be explained
@@ -1618,10 +1613,10 @@ energies, virtual particles (higher order vacuum fluctuations),
 QCD condensates, fields of spontaneously broken theories, and
 possible other, at present, unknown fields, might curve spacetime
 beyond recognition. It is usually assumed that the vacuum energy
-density ($<\rho>$) is equivalent to a contribution to the `effective'
+density ($\langle \rho \rangle$) is equivalent to a contribution to the `effective'
 cosmological constant in Einstein equations (\ref{Einstein1917}): 
 \begin{equation} \label{Lambdaeff}
-\Lambda_{eff} = \Lambda = \Lambda_{0} + \frac{8 \pi G}{c^4} < \rho_{vac} >
+\Lambda_{eff} = \Lambda = \Lambda_{0} + \frac{8 \pi G}{c^4} \langle \rho _{vac} \rangle
 \end{equation}
 where $\Lambda_0$ denotes Einstein's own `bare' cosmological constant
 which in itself leads to a curvature of empty space, i.e. when there is no
@@ -1631,7 +1626,7 @@ anything which contributes to the QFT vacuum energy density is also a
 contribution to the effective cosmological constant in GR. From
 our discussion above we have that the total vacuum energy density has
 at least the following three contributions,
-\begin{equation} \label{Energyeff}
+\begin{multline} \label{Energyeff}
 \left(
 \begin{array}{c}
 \mbox{Vacuum} \\
@@ -1652,7 +1647,7 @@ at least the following three contributions,
 \mbox{and quark} \\
 \mbox{condensates}
 \end{array}
-\right) \; + \;
+\right) + \\ \; + \;
 \left(
 \begin{array}{c}
 \mbox{The} \\
@@ -1661,7 +1656,7 @@ at least the following three contributions,
 \end{array}
 \right)
 \; + \; \cdots
-\end{equation}
+\end{multline}
 \noindent
 where the dots represent contributions from possible existing
 sources outside the Standard Model (for instance, GUT's, string 
@@ -1688,18 +1683,18 @@ is sometimes merely stated that symmetry requirements implies that the
 QFT energy-momentum tensor in vacuum must take the form of
 a constant times the metric tensor:
 \begin{equation} \label{tmn}
-<0|\hat{T}_{\mu \nu}|0>= T^{vac}_{\mu\nu} = \mbox{constant} 
+\langle 0|\hat{T}_{\mu \nu}|0 \rangle = T^{vac}_{\mu\nu} = \mbox{constant} 
 \times g_{\mu \nu} = 
-< \rho_{vac} > g_{\mu \nu},
+\langle \rho _{vac} \rangle g_{\mu \nu},
 \end{equation} 
-where the constant is identified with $ <\rho_{Vac}>$ because it
+where the constant is identified with $ \langle \rho _{Vac}\langle$ because it
 must have dimensions of an energy density. If this identification
 is accepted, it follows that the huge QFT vacuum energy will act
 as a contribution to Einstein's cosmological constant in
 eq.(\ref{Einstein1917}), and one is thus lead to a cosmological
 constant problem. However, just how symmetry constraints in
 general relativity (e.g. constraints on $T_{\mu\nu}$) are related
-to those imposed on a quantum vacuum state ($|0>$) is often not
+to those imposed on a quantum vacuum state ($|0 \rangle $) is often not
 discussed, so we shall attempt to clarify these points which
 involve the difficult subject of quantum field theory in curved
 spacetime backgrounds. 
@@ -1771,7 +1766,7 @@ over when one attempts to calculate $T^{vac}_{\mu\nu}$ as a vacuum
 expectation value of the quantum operator $\hat{T}_{\mu \nu}$ in
 various spacetime backgrounds. In particular, we are interested in
 whether or not we in all circumstances can justify equation
-(\ref{tmn}), for instance whether the quantity $<0|\hat{T}_{\mu\nu}|0>$ is
+(\ref{tmn}), for instance whether the quantity $\langle 0|\hat{T}_{\mu\nu}|0 \rangle $ is
 well-defined. As mentioned above, such a justification is crucial
 for formulating the cosmological constant problem.
 
@@ -1797,21 +1792,21 @@ state. However, as we indicated above, one usually distinguishes
 the thermal energy of the quanta from the energy of the `vacuum'
 part of this ground state. The latter part of this state is
 Lorentz invariant and may, as Guth argued, drive inflation.} Thus
-if $|0>$ is a vacuum state in a reference system $\cal{R}$ and
-$|0'>$ refers to the same vacuum state observed from a reference
+if $|0 \rangle $ is a vacuum state in a reference system $\cal{R}$ and
+$|0'\rangle$ refers to the same vacuum state observed from a reference
 frame $\cal{R'}$ which moves with uniform velocity relative to
 $R$, then the quantum expression for Lorentz invariance of the
 vacuum state reads
-$$|0'>\; =\; {\cal{U}}(L)|0>\;=\;|0>$$
+$$|0'\rangle\; =\; {\cal{U}}(L)|0 \rangle \;=\;|0 \rangle $$
 where ${\cal{U}}(L)$ is the unitary transformation (acting on
-the quantum state $|0>$) corresponding to a Lorentz transformation $L$
+the quantum state $|0 \rangle $) corresponding to a Lorentz transformation $L$
 (see e.g. \cite{weinberg96}, chapt. 2).
 All physical properties extracted from this vacuum state, such as the 
 expectation value of the energy momentum tensor,
 should also remain invariant under Lorentz transformations 
-(i.e. $<0'|T_{\mu\nu}'|0'> = <0|T_{\mu\nu}|0>$). This symmetry
+(i.e. $\langle 0'|T_{\mu\nu}'|0'rlangle = \langle 0|T_{\mu\nu}|0 \rangle $). This symmetry
 requirement can only be fulfilled if
-$$<0|\hat{T}_{\mu \nu}|0>= \mbox{constant} \times \eta_{\mu\nu}$$
+$$\langle 0|\hat{T}_{\mu \nu}|0 \rangle = \mbox{constant} \times \eta_{\mu\nu}$$
 so that eq.(\ref{tmn}) is indeed satisfied.  
 
 These aspects of Lorentz invariance of the vacuum state also serve to
@@ -1828,15 +1823,14 @@ impossible).\footnote{As we have noted earlier, one {\em can} scatter on
 system (the ground state of which is not Lorentz invariant).} 
  
 
-\ \\
-{\em  Vacuum in flat spacetime}
+\sss{Vacuum in flat spacetime}
 
 When the spacetime is still flat but not Minkowski, the Minkowski
 metric is transformed into a non-trivial spacetime metric
 $g_{\mu\nu}$. In some cases of non-trivial spacetimes it is
 difficult to identify a vacuum state as the state of no particles,
-hence it is not clear that a vacuum state $|0>$ and therefore
-$<0|\hat{T}_{\mu\nu}|0>$ are well-defined. A most striking example
+hence it is not clear that a vacuum state $|0 \rangle $ and therefore
+$\langle 0|\hat{T}_{\mu\nu}|0 \rangle $ are well-defined. A most striking example
 of this situation is provided by the Unruh-Davies effect which
 predicts that an accelerated particle detector moving through the
 Minkowski vacuum will detect particles (Birrell and Davies
@@ -1850,8 +1844,7 @@ attributed to the experiences of these observers ``being
 (\cite{birrell82} p.55). Eqn. (\ref{tmn}) can therefore be upheld
 if we select a non-accelerated reference frame. 
 
-\ \\
-{\em Vacuum in curved spacetime}
+\sss{Vacuum in curved spacetime}
 
 The gravitational field (e.g. in our expanding universe) will in
 general be expected to produce particles, thereby obscuring the
@@ -1859,11 +1852,11 @@ concept of vacuum as a state with no particles. In fact, when
 gravitational fields are taken into account ``...inertial
 observers become free-falling observers, and in general no two
 free-falling detectors will agree on a choice of vacuum''
-(\cite{birrell82} p.55). So whereas the state $|0>$ with no
+(\cite{birrell82} p.55). So whereas the state $|0 \rangle $ with no
 particles is the obvious vacuum state in Minkowski spacetime, in
 general there is not any reference system in which there is no
 particle production. With no clear vacuum concept, one cannot give
-a precise meaning to $<0|\hat{T}_{\mu\nu}|0>$, let alone associate
+a precise meaning to $\langle 0|\hat{T}_{\mu\nu}|0 \rangle $, let alone associate
 this quantity with a cosmological term as in eq.(\ref{tmn}). 
 These issues can be further examined by writing down the central
 equation for discussions of QFT's in curved spacetime backgrounds
@@ -1871,14 +1864,14 @@ equation for discussions of QFT's in curved spacetime backgrounds
 \beq
 \label{curvedGR}
 R_{\mu \nu} - \frac{1}{2} g_{\mu \nu} R -
-\Lambda g_{\mu \nu} =  \frac{8 \pi G}{c^4} \; <\hat{T}_{\mu \nu}>
+\Lambda g_{\mu \nu} =  \frac{8 \pi G}{c^4} \; \langle\hat{T}_{\mu \nu}\rangle
 \eeq
 where the notation is the same as in eq.(\ref{Einstein1917}), but
 where the right hand side is now the expectation value of a
 quantum operator for relevant states (e.g. the vacuum state). This
 semi-classical equation assumes a specific relation between the
 {\em classical} gravitation field and the {\em quantum}
-expectation value of $<T_{\mu\nu}>$. Conjectured applications of
+expectation value of $\langle T_{\mu\nu} \rangle $. Conjectured applications of
 eq.(\ref{curvedGR}) involve both more local physical phenomena,
 e.g. involving quantum fields in the vicinity of black holes
 (Hawking radiation) as well as global properties of quantum fields
@@ -1895,14 +1888,14 @@ value} of the electric current operator" (\cite{birrell82} p.154).}
 Apart from the issue of experimental support of
 eq.(\ref{curvedGR}), the question is whether the equation is
 meaningful: First, it is difficult to get a sensible value for
-$<\hat{T}_{\mu \nu}>$ since there are more divergences introduced
+$\langle \hat{T}_{\mu \nu} \rangle $ since there are more divergences introduced
 in the curved spacetime case relative to the flat spacetime case,
-so that $<\hat{T}_{\mu \nu}>$ remains divergent even if
-$<\hat{T}_{\mu \nu}>_{flat}$ is subtracted (\cite{birrell82}
+so that $\langle \hat{T}_{\mu \nu} \rangle $ remains divergent even if
+$\langle \hat{T}_{\mu \nu} \rangle _{flat}$ is subtracted (\cite{birrell82}
 p.153). Furthermore it is only possible for some simple cases
 (e.g. quantum fields in a static universe) to calculate
-renormalized (finite) values for $<\hat{T}_{\mu
-\nu}>$.\footnote{The question of regularizing QFT's in curved
+renormalized (finite) values for $\langle\hat{T}_{\mu
+\nu}\rangle$.\footnote{The question of regularizing QFT's in curved
 spacetime has been discussed further since Birrell and Davies
 \cite{birrell82}. For instance, developments in the so-called zeta
 function regularization programme, promoted e.g. by Hawking
@@ -1915,22 +1908,22 @@ F. Antonsen for discussions on this subject.} Second, and more
 general, eq.(\ref{curvedGR}) represents a `back-reaction' problem
 which needs to be solved in some self-consistent way (the
 divergence difficulties just mentioned still assume a fixed curved
-background): If $<\hat{T}_{\mu \nu}>$ affects the metric, then
+background): If $\langle \hat{T}_{\mu \nu} \rangle $ affects the metric, then
 this metric will change the assumptions for calculating
-$<\hat{T}_{\mu \nu}>$ (see e.g. \cite{wald94}
+$\langle \hat{T}_{\mu \nu} \rangle $ (see e.g. \cite{wald94}
 p.54).\footnote{Further discussion of the problems with eq.
 (\ref{curvedGR}) can be found e.g. in (\cite{wald94} p.98.)} This
 `hen and egg' problem is complicated not just because
 back-reaction problems in general are difficult to
 solve, but because the 
-interesting physical states, e.g. the vacuum state $|0>$, 
+interesting physical states, e.g. the vacuum state $|0 \rangle $, 
 appearing on the right hand side of the equation are hardly 
 well-defined in curved spacetime except in certain special cases!
 
 
 Finally, when interactions are taken into account in the curved
 space case, it becomes even more difficult to establish general
-renormalizability of $<\hat{T}_{\mu \nu}>$ (\cite{birrell82}
+renormalizability of $\langle \hat{T}_{\mu \nu} \rangle $ (\cite{birrell82}
 p.292), which means that we do not know if, for example,
 interacting QED is renormalizable (and thus physical meaningful)
 in curved space:
@@ -1955,8 +1948,7 @@ shift, the anomalous magnetic moment of the electron, etc.) under
 small gravitational perturbations, e.g. due to the earth's gravitational 
 field, have been quite remarkable.
 
-\ \\
-{\em Is there still a cosmological constant problem?}
+\sss{Is there still a cosmological constant problem?}
 
 From the above discussion, it might seem that it is no longer clear
 that a cosmological constant problem can be formulated
@@ -2197,7 +2189,7 @@ Moreover, we have mentioned the question of whether the quantities
 (e.g. the concept of a vacuum state) appearing in
 eq.(\ref{curvedGR}) are well-defined. A further problem (a
 `hen-egg' problem) was what comes first: The background geometry
-which depends on $<T_{\mu\nu}>$, or $<T_{\mu\nu}>$ which depends
+which depends on $\langle T_{\mu\nu} \rangle $, or $\langle T_{\mu\nu} \rangle $ which depends
 on the background geometry? On the other hand, we have pointed out
 that the observational input of an approximately flat spacetime
 (due to the overall low density of matter in the universe as well
@@ -2488,10 +2480,9 @@ understanding of the cosmological constant problem as constituting a
 fundamental problem in physics. At the same time we have argued that
 the conception of a problem -- although motivated by observations and
 theoretical expectations -- involves at least two (partly
-philosophical) convictions.\\
+philosophical) convictions.
 
-\noindent
-{\em 1. The quantum vacuum energy is physical real}
+\sss{The quantum vacuum energy is physical real}
 
 \noindent One must be convinced that the various QFT contributions
 to the vacuum energy density indeed result in a physical real
@@ -2538,10 +2529,9 @@ could have been the source of inflation.  It should be borne in mind,
 however, that since, as yet, no Higgs particle has been found, and no
 clear confirmation for inflation has been established, these
 motivations for conceiving the vacuum energy as physical real remain
-speculative.\\
+speculative.
 
-\noindent
-{\em 2. The existence of a link between $\Lambda$ and quantum vacuum energy}
+\sss{The existence of a link between $\Lambda$ and quantum vacuum energy}
 
 \noindent
 If one grants the reality of quantum vacuum energy one must also
@@ -2564,9 +2554,9 @@ relationship, we have discussed some of the technical and
 conceptual difficulties related to the semi-classical approach in
 which quantum fields are treated in a classical curved spacetime
 background. These difficulties involve the problem of calculating
-a finite value for $<\hat{T}_{\mu\nu}>$ in a curved background,
+a finite value for $\langle \hat{T}_{\mu \nu} \rangle $ in a curved background,
 the problem of how to take the back-reaction effects of
-$<\hat{T}_{\mu\nu}>$ on the metric into account, and the
+$\langle \hat{T}_{\mu \nu} \rangle $ on the metric into account, and the
 difficulty of even defining a vacuum state in a curved background.
 Nevertheless, we suggested that such difficulties are somehow
 weakened by the fact that the cosmological constant
@@ -2592,8 +2582,7 @@ such incentives are based should, however, continuously be
 illuminated.
 
 
-\ \\
-{\em Acknowledgements}
+\section*{Acknowledgements}
 
 \noindent
 It is a pleasure to thank Holger Bech Nielsen and Benny Lautrup
