--- a/hep-th-0012253/main.tex
+++ b/hep-th-0012253/main.tex
@@ -240,7 +240,7 @@ $\Lambda$ which are not concerned with quantum field
 theory.\footnote{As will be indicated below, however, the
 `observational history' of the cosmological constant has
 influenced the speculations of the quantum vacuum, for instance
-those of Lema\^ \i tre and Zeldovich. We also note that a need
+those of Lema\^ \i tre and Zel'dovich. We also note that a need
 for a small astronomical dictated $\Lambda$ -- if confirmed --
 would add a further constraint on possible cancellation mechanisms
 for the huge vacuum energy in quantum theory.}
