--- a/hep-th-0012253/main.tex
+++ b/hep-th-0012253/main.tex
@@ -240,7 +240,7 @@ $\Lambda$ which are not concerned with quantum field
 theory.\footnote{As will be indicated below, however, the
 `observational history' of the cosmological constant has
 influenced the speculations of the quantum vacuum, for instance
-those of Lema\^ \i tre and Zel'dovich. We also note that a need
+those of Lema\^ \i tre and Zeldovich. We also note that a need
 for a small astronomical dictated $\Lambda$ -- if confirmed --
 would add a further constraint on possible cancellation mechanisms
 for the huge vacuum energy in quantum theory.}
@@ -434,47 +434,47 @@ electromagnetic field.
 
 In his review, Weinberg indicates that the first published discussion
 of the contribution of quantum fluctuations to the cosmological
-constant was a 1967 paper by Zel'dovich
+constant was a 1967 paper by Zeldovich
 \cite{zeldovich67}.\footnote{As noted above, it was believed at the
 time that a non-zero vacuum density was needed to account for
-observations of quasars \cite{petrosian74}} Zel'dovich does not
+observations of quasars \cite{petrosian74}} Zeldovich does not
 address why the zero-point energies of the fields do not build up a
 huge cosmological constant.  So he assumes, rather {\em ad hoc}, that
 the zero-point energies, as well as higher order electromagnetic
 corrections to this, are effectively cancelled to zero in the
 theory. What is left are the higher order corrections
-where gravity is involved, and the spirit of Zel'dovich's paper is
+where gravity is involved, and the spirit of Zeldovich's paper is
 that this `left over' of vacuum energy, acting as a cosmological
-constant, might explain the quasar observations. However, Zel'dovich's
+constant, might explain the quasar observations. However, Zeldovich's
 estimate still gives a contribution to the cosmological constant which
 is a factor $\sim 10^8$ too large relative to what was needed to
 explain the quasar observations.\footnote{In the estimate of the
-gravitational vacuum energy contribution, Zel'dovich considers a
+gravitational vacuum energy contribution, Zeldovich considers a
 proton as an example. The vacuum state of the proton field contains virtual
 pairs of particles (virtual proton-antiproton pairs) with an effective
 density $ n \sim 1 / \lambda^3 $ where $\lambda =
 \hbar/ m c$ is the Compton wavelength of the proton (note, $\lambda$
 does not refer to the cosmological constant in this expression). 
-Zel'dovich then considers the gravitational
+Zeldovich then considers the gravitational
 interaction energy of these virtual pairs which is $G m^2 /
 \lambda$ for one pair, thus leading to a contribution to an
 effective energy density in the vacuum of the order of magnitude: $
 \rho_0 \sim G m^2/\lambda \times 1/\lambda^3 = G m^6 c^4 / \hbar^4 $.}
 
 In a longer article \cite{zeldovich68} from the following year
-Zel'dovich emphasizes that zero-point energies of particle
+Zeldovich emphasizes that zero-point energies of particle
 physics theories cannot be ignored when gravitation is taken into
 account, and since he explicitly discusses the discrepancy
 between estimates of vacuum energy and observations, he is
 clearly pointing to a cosmological constant problem. In
-\cite{zeldovich68}, Zel'dovich arrives at a QED zero-point energy
+\cite{zeldovich68}, Zeldovich arrives at a QED zero-point energy
 (his formula (IX.1) p.392) 
 \beq 
 \rho_{vac} \sim m \left (\frac{mc}{\hbar} \right ) ^3 \sim 10^{17} g/cm^3
 \:\;\; , \:\;\; \Lambda = 10^{-10} cm^{-2}
 \eeq
 where $m$ (the ultra-violet cut-off) is taken equal to the proton
-mass. Zel'dovich notes that since this estimate exceeds
+mass. Zeldovich notes that since this estimate exceeds
 observational bounds by 46 orders of magnitude it is clear that
 ``...such an estimate has nothing in common with reality''. 
 
@@ -558,7 +558,7 @@ suitable counter terms (see next section) ``...the observed value
 [of $\Lambda$] is a problem only if one takes the attitude that it
 should be derivable from other fundamental constants in particle
 physics". This is not further elaborated but Bludman and Ruderman
-have a reference to Zel'dovich's 1968 paper in which it is
+have a reference to Zeldovich's 1968 paper in which it is
 suggested that a possible relation between $\Lambda$ and
 fundamental constants in particle physics might be ``useful in the
 construction of a genuine logically-consistent theory"
@@ -2342,7 +2342,7 @@ constant problem has been changing significantly over the years,
 from Pauli's ``amusement" over coffee in the 1920s to the modern
 view that the cosmological constant is a fundamental problem in
 physics. As we have described, this changing historical conception
-includes (1) the realization by Zel'dovich in the late 1960s that
+includes (1) the realization by Zeldovich in the late 1960s that
 zero-point energy cannot be ignored when gravity is taken into
 account (2) The appearance of spontaneous symmetry breaking and
 its possible implication for the early universe (early-mid 1970s),
@@ -2437,12 +2437,12 @@ challenge.
 Despite Abbott's examples, it is of course far from obvious that
 natural relations always point toward unified theories while
 `unnatural' relations cover the fact that something is deeply
-misunderstood. In any case, it it interesting that Zel'dovich 
+misunderstood. In any case, it it interesting that Zeldovich 
 did try to construct a numerical value for the cosmological constant
 as a `natural relation' from the perspective of the dream of
 unification between the macroscopic and the microscopic domain. In
 much the same spirit as Eddington and Dirac's search for
-coincidence between large numbers in cosmology, Zel'dovich
+coincidence between large numbers in cosmology, Zeldovich
 (\cite{zeldovich68} p.384) constructs the cosmological constant as
 the combination
 \beq 
@@ -2452,9 +2452,9 @@ the combination
 where $m_p$ is the proton mass (assumed in those
 days to be a fundamental particle), and $G$ and $\hbar$ are
 Newton's gravitational constant and Planck's constant, respectively.
-However, as Zel'dovich notes, this `natural relation' (\ref{natural})
+However, as Zeldovich notes, this `natural relation' (\ref{natural})
 is approximately 7 orders of magnitude larger than the
-observational constraint. But, Zel'dovich continues (\cite{zeldovich68}, 
+observational constraint. But, Zeldovich continues (\cite{zeldovich68}, 
 p. 392):
 \begin{quote}
 ``Numerical agreement could be obtained by replacing $m_p^6$
@@ -2465,7 +2465,7 @@ a discrepancy of ``only'' $10^7$ times is an accomplishment
 compared with the discrepancy of the estimates by a
 factor $10^{46}$.''
 \end{quote}
-In spite of Zel'dovich's optimism it appears that it has not, so
+In spite of Zeldovich's optimism it appears that it has not, so
 far, been possible to establish `natural' relations for the
 cosmological constant. But it is, as already indicated, not
 clear if the classification of the cosmological constant problem
@@ -2919,11 +2919,11 @@ Fitch V.L. et al (eds) {\em Critical Problems in Physics}
 \bibitem{witten00} Witten, E. (2000) `The Cosmological Constant
 From the Viewpoint of String Theory' {\em hep-ph/0002297}
 
-\bibitem{zeldovich67} Zel'dovich, Y.B. (1967) `Cosmological Constant
+\bibitem{zeldovich67} Zeldovich, Y.B. (1967) `Cosmological Constant
 and Elementary Particles' {\em JETP letters} {\bf 6}, 316-317
 
 \bibitem {zeldovich68}
-Zel'dovich, Y.B. (1968) `The Cosmological Constant and the Theory
+Zeldovich, Y.B. (1968) `The Cosmological Constant and the Theory
 of Elementary Particles' {\em Soviet Physics Uspekhi} {\bf 11},
 381-393
 
