--- a/hep-th-0012253/main.tex
+++ b/hep-th-0012253/main.tex
@@ -848,7 +848,7 @@ numerical answer clearly depends on which frequency interval we
 employ in the integration in eq.(\ref{zpeqed}). For field modes in
 the optical region from 400 nm to 700 nm (visible light), the
 corresponding zero-point energy will amount to about $220 \;
-erg/cm^3$ (\!\cite{milonni94}, p. 49). If we instead consider the
+erg/cm^3$ (\!\!\cite{milonni94}, p. 49). If we instead consider the
 electromagnetic field modes in the energy range from zero up to an
 ultraviolet cut-off set by the electroweak scale $\sim 100 \; GeV$
 (where the electromagnetic interaction is believed to be
