--- a/1702.00850/boltzmann.tex
+++ b/1702.00850/boltzmann.tex
@@ -23,15 +23,22 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=5000
-\hbadness=2000
-\usepackage[small]{titlesec}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-% different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 % optional
 
@@ -695,6 +702,7 @@ This research is funded in part by the Walter Burke Institute for Theoretical Ph
 
 \begin{thebibliography}{999}
 \parindent=.6em
+\raggedright
 
 %\cite{Dyson:2002pf}
 \bibitem{Dyson:2002pf}
