--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt,oneside]{scrbook}
+\documentclass[12pt,oneside]{scrbook}
 %\documentclass[a4paper,12pt]{article}
 
 % bibliography stuff
