--- a/1912.10642v6/ct-notes-new-eu.tex
+++ b/1912.10642v6/ct-notes-new-eu.tex
@@ -3065,18 +3065,18 @@ Here are some examples for the category of groups.
 
 \subsection{Representable functors}
 
-In many of the examples in the section above, the given functors are actually of a very simple form: they are in the form $\Hom_{C}(S,-):\cat{C}\to\Set$ for some object $S$. 
+In many of the examples in the section above, the given functors are actually of a very simple form: they are in the form $\Hom_\cat{C}(S,-):\cat{C}\to\Set$ for some object $S$. 
 
 \begin{deph}
- Let $\cat{C}$ be a category. A functor $F:\cat{C}\to\Set$ is called \emph{representable} if it is naturally isomorphic to the functor $\Hom_{C}(S,-):\cat{C}\to\Set$ for some object $S$ of $\cat{C}$. In that case we call $S$ the \emph{representing object}. 
+ Let $\cat{C}$ be a category. A functor $F:\cat{C}\to\Set$ is called \emph{representable} if it is naturally isomorphic to the functor $\Hom_\cat{C}(S,-):\cat{C}\to\Set$ for some object $S$ of $\cat{C}$. In that case we call $S$ the \emph{representing object}. 
  
- A presheaf $F:\cat{C}^\op\to\Set$ is called \emph{representable} if it is naturally isomorphic to the functor $\Hom_{C}(-,S):\cat{C}^\op\to\Set$ for some object $S$ of $\cat{C}$. Again, in that case we call $S$ the \emph{representing object}. 
+ A presheaf $F:\cat{C}^\op\to\Set$ is called \emph{representable} if it is naturally isomorphic to the functor $\Hom_\cat{C}(-,S):\cat{C}^\op\to\Set$ for some object $S$ of $\cat{C}$. Again, in that case we call $S$ the \emph{representing object}. 
 \end{deph}
 
 Here is a way to interpret representable functors and representable presheaves. 
-A representable functor $\Hom_{C}(S,-):\cat{C}\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_{C}(S,X)$ of arrows from $S$ to $X$. Intuitively, the features that it extracts from $X$ are exactly all the possible ways of mapping $S$ into $X$, as if $S$ were a sort of \emph{probe} that we use to explore the structure of $X$.
+A representable functor $\Hom_\cat{C}(S,-):\cat{C}\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_\cat{C}(S,X)$ of arrows from $S$ to $X$. Intuitively, the features that it extracts from $X$ are exactly all the possible ways of mapping $S$ into $X$, as if $S$ were a sort of \emph{probe} that we use to explore the structure of $X$.
 
-Dually, a representable presheaf $\Hom_{C}(-,S):\cat{C}^\op\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_{C}(X,S)$ of arrows from $X$ to $S$. Intuitively, the features that it extracts from $X$ are all the possible ways of mapping $X$ to $S$, or all the possible \emph{observations} of $X$ with values in $S$ (think of $S$ as a ``screen'' onto which $X$ can be projected in many possible ways). 
+Dually, a representable presheaf $\Hom_\cat{C}(-,S):\cat{C}^\op\to\Set$ takes an objects $X$ of $\cat{C}$ and gives the set $\Hom_\cat{C}(X,S)$ of arrows from $X$ to $S$. Intuitively, the features that it extracts from $X$ are all the possible ways of mapping $X$ to $S$, or all the possible \emph{observations} of $X$ with values in $S$ (think of $S$ as a ``screen'' onto which $X$ can be projected in many possible ways). 
 
 \begin{eg}[topology]
  Let's see which functors from \Cref{toptoset} are representable. Let $X$ be a topological space.
