--- a/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
@@ -39,6 +39,7 @@ bookmarksopenlevel=10
 
 % different \sum and also fixes underbraces
 \input{../helpers/fix-underbrace}
+\input{../helpers/cmrsum}
 
 % optional
 
