--- a/1612.09375-12/BasicCategoryTheory.tex
+++ b/1612.09375-12/BasicCategoryTheory.tex
@@ -6,7 +6,7 @@
 % Root file.  Run pdflatex on this file.
 % 
 
-\documentclass[spanningrule]{cambridge7A} 
+\documentclass[spanningrule]{cambridge7A-12} 
 
 \usepackage{titlesec}
 %\titlelabel{\thetitle.\quad}
@@ -35,9 +35,10 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={5.9in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[papersize={6.5in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
+\sloppy
+\linespread{1.05}
+
 
 % different \sum and also fixes underbraces
 \input{../helpers/cmrsum}
