--- a/1612.09375-12/BasicCategoryTheory-Charter-euler.tex
+++ b/1612.09375-12/BasicCategoryTheory-Charter-euler.tex
@@ -37,10 +37,8 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[papersize={6.5in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
-\sloppy
-\raggedbottom
-\linespread{1.05}
+\input geometry
+
 
 % different \sum and also fixes underbraces
 \input{../helpers/fix-underbrace}
