--- a/1612.09375-12/BasicCategoryTheory-fancy.tex
+++ b/1612.09375-12/BasicCategoryTheory-fancy.tex
@@ -35,10 +35,7 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[osf, noBBpl, sc]{mathpazo}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.5in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
-\sloppy
-\raggedbottom
-\linespread{1.05}
+\input geometry
 
 
 % different \sum and also fixes underbraces
